code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Nov-2011 Jean-Marie Simonet
 # [#26840] manifest_cache entry not generated for file packages on install. Thanks Michael
 # [#27108] *Fatal Error in multilangstatus module when languagefilter plugin disabled

04-Nov-2011 Jean-Marie Simonet
 # [#27075] Make sure there is a blank line at the end of every PHP file. Thanks Rouven
 
04-Nov-2011 Christophe Demko
 # [#27038] Apply the patch to fix the MySQL specific queries - com_installer (Sudhi Seshachala)

02-Nov-2011 Christophe Demko
 # [#27023] Component updates not working in Joomla! 1.7.0 and later (Nicholas Dionysopoulos)
 - Remove module menu entry (missing in [#27072])
 - [#27072] Books module when installing without sample data (Rune Sjøen)

01-Nov-2011 Jean-Marie Simonet
 # [#26608] Save as copy template style. Thanks Christophe
 # [#26959] Can't mass mail to SA group. Thanks Christophe
 # [#27056] System - Debug Not Allowed Any Groups to View when selected
 + Adding Taiwan and Hong-Kong flags to mod_languages. Thanks Eddy.

31-Oct-2011 Christophe Demko
 # [#27061] Beez5 have image path link to beez_20

28-Oct-2011 Jean-Marie Simonet
 # [#27029] *Adding column language tag in Language Manager Installed languages

26-Oct-2011 Jean-Marie Simonet
 # [#27018] The Table in the Category List Layout Could Sort ONLY by Created Date Irrespective of What is Selected for Show Date

25-Oct-2011 Jean-Marie Simonet
 + [#26995] *Adding to the multilanguage status module a check for contacts assigned languages. Thanks Christophe.
 #$ [#26988] Incongruous Language Implementation in Article List Header
 $ [#27019] Change Modified date to Modified Date for Consistency in en-GB.com_content.ini in the Front End. Thanks Mig.

24-Oct-2011 Jean-Marie Simonet
 # [#27010] Show or hide the menu title does not exist for the type of menu alias

23-Oct-2011 Christophe Demko