@@ -1,5 +1,4 @@
 /**
- * @version		$Id: caption.js 19172 2010-10-20 23:54:25Z chdemko $
  * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
