@@ -1,5 +1,4 @@
 /**
- * @version		$Id: switcher-uncompressed.js 14276 2010-01-18 14:20:28Z louis $
  * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
